added color to h1, added top padding of 100px to the h1 to pushcontent down on the img

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styles/journal.css" />
-    <title>Daily Journal</title>
+    <title>Daily Journal🖍📓✏</title>
   </head>
   <body>
-    <h1 class="journal_header">Daily Journal</h1>
+    <h1 class="journal_header">Daily Journal🖍📓✏</h1>
     <div class="journal_form">
       <form action="">
         <fieldset class="journal_fields">
@@ -54,5 +54,6 @@
       <!-- end of form -->
     </div>
     <!-- end of div journal form -->
+    <script src="scripts/journal.js"></script>
   </body>
 </html>
