added a form clear on submission of entry

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="journal_form">
       <div class="journalSubmissions">
         <fieldset class="journal_fields">
-          <label for="JournalDate">Date of entry:</label>
+          <label for="journalDate">Date of entry:</label>
           <input type="date" name="journalDate" id="journalDate" />
         </fieldset>
         <!-- end of journal date -->
