--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,35 @@
           Record Journal Entry
         </button>
         <!-- end of button -->
+        <hr />
+        <fieldset class="jornalMoodFilter">
+          <legend>
+            Filter Journal Entries by Mood
+          </legend>
+          <input
+            type="radio"
+            name="filterMood"
+            value="glorious"
+            id="filterGlorious"
+          />
+          <label for="filterGlorious">Glorious</label>
+          <input
+            type="radio"
+            name="filterMood"
+            value="sappy"
+            id="filterSappy"
+          />
+          <label for="filterSappy">Sappy</label>
+          <input
+            type="radio"
+            name="filterMood"
+            value="defeated"
+            id="filterDefeated"
+          />
+          <label for="filterDefeated">Defeated</label>
+          <input type="radio" name="filterMood" value="Meh" id="filterMeh" />
+          <label for="filterMeh">Meh</label>
+        </fieldset>
       </div>
       <!-- end of form -->
     </div>
